Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/pokeball.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raúl Espinosa - National Pokédex</title>
+
+    <!-- General meta description -->
+    <meta
+      name="description"
+      content="Explore my National Pokédex! Based on Pokémon Scarlet & Violet Pokédex and powered by PokéAPI. Not affiliated with the official Pokémon brand."
+    />
+
+    <!-- Open Graph (used by Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:title" content="Raúl Espinosa - National Pokédex" />
+    <meta
+      property="og:description"
+      content="Explore my National Pokédex! Based on Pokémon Scarlet & Violet Pokédex and powered by PokéAPI. Not affiliated with the official Pokémon brand."
+    />
+    <meta property="og:image" content="https://espinosa-nationaldex.vercel.app/preview.png" />
+    <meta property="og:url" content="https://espinosa-nationaldex.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Raúl Espinosa - National Pokédex" />
+    <meta
+      name="twitter:description"
+      content="Explore my National Pokédex! Based on Pokémon Scarlet & Violet Pokédex and powered by PokéAPI. Not affiliated with the official Pokémon brand."
+    />
+    <meta name="twitter:image" content="https://espinosa-nationaldex.vercel.app/preview.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
